# stasher

./: .gitignore  Doxyfile.in  Makefile.am  adminhalt.tst.C  adminsetcert2.tst.C  adminstop.H  adminstop.tst.C  appsdir.tst.C  baton.C  baton.tst.C  baton2.tst.C  batonhandoverthread.C  batonhandoverthread.H  batonhandoverthread.msgs.xml  boolreffwd.H  client.C  clientreconnect.tst.C  clusterconnecter.C  clusterconnecter.H  clusterconnecter.tst.C  clusterconnecterimpl.H  clusterinfo.C  clusterinfo.tst.C  clusterinfofwd.H  clusterlistener.C  clusterlistener.H  clusterlistener.tst.C  clusterlistenerimpl.C  clusterlistenerimpl.H  clusterlistenerimpl.msgs.xml  clusternotifier.C  clusternotifierfwd.H  clusterstatusnotifier.H  clustertlsconnectshutdown.H  configure.ac  debuild.in  dirmsgreply.H  dirs.C  fdobjreaderthread.C  fdobjreaderthread.H  (+183 more)
docbook/: .gitignore  asynchronous.xml  book.css  book.xml  clusterhalt.xml  createmanagedobject.xml  docbook.xsl  freebsd.xml  getdir.xml  heartbeat.xml  heartbeatclass.xml  heartbeatcreate.xml  heartbeatupdate.xml  intro.xml  manager.xml  newclustersetup.xml  other_requests.xml  rebooting.xml  removenode.xml  serdeser.xml  simpleclient.xml  stasher.xml  stashermg.xml  subscribeserverstatus.xml  synchronousintro.xml  versioned.xml  versionedput.xml
examples/: heartbeat.C  subscribe.C
examples/inventory/: Makefile.am  configure.ac  setinventory.C  showinventory.C  warehouses.H  xferinventory.C  xferinventory2.C
examples/manager/: hierarchymonitor.C  serverstatusupdates.C
examples/simpleclient/: Makefile.am  configure.ac
examples/updatethread/: updatethread.msgs.xml  updatethread2.C
packaging/debian/: changelog  control  libstasher-client.soname.lintian-overrides  libstasher.soname.lintian-overrides  lintian-overrides.allow-errors  rules  stasher.lintian-overrides  stasher.postrm  stasher.service
packaging/fedora/: stasher.spec.in
packaging/freebsd9/databases/stasher/: Makefile  pkg-deinstall  pkg-install  pkg-plist
perl/Stasher/: .gitignore  Changes  MANIFEST  README  Stasher.xs  Stasherapi.C  Stasherapi.h  typemap
perl/Stasher/lib/: .gitignore  Stasher.pm.in
po/: stasher.pot
stasher/: .gitignore  Doxyfile.in  Makefile.am  README  adminhalt.tst.C  adminsetcert.tst.C  adminsetcert2.tst.C  adminstop.tst.C  adminstopint.C  adminstopint.H  appsdir.tst.C  baton.C  baton.H  baton.tst.C  baton2.tst.C  batonfwd.H  batonhandoverthread.C  batonhandoverthread.H  batonhandoverthread.msgs.xml  boolref.C  boolref.H  client.C  client.H  client.msgs.xml  clientfwd.H  clientreconnect.tst.C  clusterconnecter.C  clusterconnecter.H  clusterconnecter.tst.C  clusterconnecterimpl.C  clusterconnecterimpl.H  clusterinfo.C  clusterinfo.H  clusterinfo.tst.C  clusterlistener.C  clusterlistener.H  clusterlistener.msgs.xml  clusterlistener.tst.C  clusterlistenerfwd.H  clusterlistenerimpl.C  (+270 more)
stasher/docbook/: book.xml  createmanagedobject.xml  currentbaseobj.xml  currentobj.xml  docbook.xsl  freebsd.xml  get_request.xml  heartbeatex.xml  heartbeatother.xml  intro.xml  l10.xml  managedhierarchymonitor.xml  managedobject.xml  managedserverstatusupdates.xml  managedsubscriber.xml  newnodesetup.xml  process_request.xml  put_request.xml  renewclustercert.xml  renewnodecert.xml  serdeser.xml  simpleclient.xml  subscribe.xml  synchronousintro.xml  versioned.xml  versionedptr.xml
stasher/examples/: get_request.C  getdir.C  subscribe.C  subscribeserverstatus.C
stasher/examples/inventory/: Makefile.am  adjinventory.C  configure.ac  inventory.H  setinventory.C  showinventory2.C  showinventory3.C  warehouses.C  warehouses.H  xferinventory.C  xferinventory2.C
stasher/examples/manager/: hierarchymonitor.C  managedobject.C  serverstatusupdates.C  subscriber.C
stasher/examples/simpleclient/: configure.ac  simpleget.C  simpleput.C
stasher/examples/updatethread/: Makefile.am  configure.ac  updatethread.C  updatethread2.C
stasher/packaging/fedora/: .gitignore  Makefile.am  stasher.service.in  stasher.spec.in
stasher/packaging/freebsd9/databases/stasher/: Makefile  pkg-deinstall  pkg-descr  pkg-plist
stasher/packaging/freebsd9/databases/stasher/files/: stasherd.in
stasher/perl/Stasher/: Makefile.PL  Stasher.xs  Stasherapi.C  Stasherapi.h
stasher/perl/Stasher/lib/: Stasher.pm.in
stasher/perl/Stasher/t/: Stasher.t
stasher/po/: .gitignore  Makevars  POTFILES.in  stasher.pot
stasher/stasher/: client.H  clientfwd.H  clusterstate.H  contents.H  current.H  currentbase.H  heartbeat.H  managedconnectionupdate.H  managedhierarchymonitor.H  managedobject.H  managedserverstatuscallback.H  managedsubscriber.H  manager.H  namespace.H  nodeinfo.H  objname.H  process_request.H  puttransaction.H  quorumstate.H  quorumstateobj.H  repoclusterquorumcallbackbase.H  reqstat.H  retrobj.H  serobjname.H  serverstatuscallback.H  userhelo.H  userinit.H  userput.H  versionedcurrent.H  versionedptr.H  versionedput.H  versionscollected.H
