@LIBCXX_AM@

noinst_PROGRAMS=showinventory showinventory2 showinventory3 adjinventory xferinventory xferinventory2 setinventory

showinventory_SOURCES=showinventory.C inventory.H
showinventory_LDADD=-lstasher-client

showinventory2_SOURCES=showinventory2.C inventory.H
showinventory2_LDADD=-lstasher-client

showinventory3_SOURCES=showinventory3.C inventory.H
showinventory3_LDADD=-lstasher-client

adjinventory_SOURCES=adjinventory.C inventory.H warehouses.C warehouses.H
adjinventory_LDADD=-lstasher-client

xferinventory_SOURCES=xferinventory.C inventory.H warehouses.C warehouses.H
xferinventory_LDADD=-lstasher-client

xferinventory2_SOURCES=xferinventory2.C inventory.H warehouses.C warehouses.H
xferinventory2_LDADD=-lstasher-client

setinventory_SOURCES=setinventory.C inventory.H
setinventory_LDADD=-lstasher-client
