#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([simpleclient], [1], [mrsam@courier-mta.com])
AC_CONFIG_SRCDIR([showinventory.C])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(dist-bzip2 foreign)
LT_INIT

# Checks for programs.
AC_PROG_CXX

LIBCXX_INIT

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
